force-app/main/default/objects/Case/fields/first_opened_at__c.field-meta.xml
<CustomField>
    <fullName>first_opened_at__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>First Opened At</label>
    <type>DateTime</type>
</CustomField>