force-app/main/default/objects/Case/fields/First_Response_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field gets automatically set to true when the first email has been sent to the customer</description>
    <inlineHelpText>Field gets automatically set to true when the first email has been sent to the customer</inlineHelpText>
    <label>First Response Sent</label>
    <type>Checkbox</type>
</CustomField>