force-app/main/default/objects/Case/fields/Hardware_Device_Category__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Device_Category__c</fullName>
    <label>Hardware Issues</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Card Reader Damaged</fullName>
                <label>Card Detection Issue</label>
            </value>
            <value>
                <fullName>Door Relay Issue</fullName>
            </value>
            <value>
                <fullName>Input Wiegand Line Damaged</fullName>
            </value>
            <value>
                <fullName>LCD Issues</fullName>
            </value>
            <value>
                <fullName>Output Wiegand Line Damaged</fullName>
            </value>
            <value>
                <fullName>Sensor Issue</fullName>
            </value>
            <value>
                <fullName>White LCD</fullName>
            </value>
            <value>
                <fullName>Device Database Error</fullName>
            </value>
            <value>
                <fullName>NAND Corruption</fullName>
            </value>
            <value>
                <fullName>Camera Issue</fullName>
            </value>
            <value>
                <fullName>Boot-Up Issue</fullName>
            </value>
            <value>
                <fullName>Crack on front-shell</fullName>
            </value>
            <value>
                <fullName>Random Reboot Issue</fullName>
            </value>
            <value>
                <fullName>No Ethernet</fullName>
            </value>
            <value>
                <fullName>SPIO Line Damaged</fullName>
            </value>
            <value>
                <fullName>ACP_LED lines damaged</fullName>
            </value>
            <value>
                <fullName>Faulty IO Cables</fullName>
                <label>Faulty IO Cable</label>
            </value>
            <value>
                <fullName>Android Crash</fullName>
            </value>
            <value>
                <fullName>Power Issue</fullName>
            </value>
            <value>
                <fullName>Audio Issue</fullName>
            </value>
            <value>
                <fullName>Proximity Sensor Defect</fullName>
            </value>
            <value>
                <fullName>Moist issue in Device</fullName>
            </value>
            <value>
                <fullName>Mechanical Defect</fullName>
            </value>
            <value>
                <fullName>Speaker Issue</fullName>
            </value>
            <value>
                <fullName>Microphone Issue</fullName>
            </value>
            <value>
                <fullName>Battery Issue</fullName>
            </value>
            <value>
                <fullName>Device Hang Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Physically Damaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>