force-app/main/default/objects/Case/fields/Hours_Since_New__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_New__c</fullName>
    <formula>IF( 
FLOOR(( NOW() -  CreatedDate  )*24)&gt;9, 
TEXT(FLOOR(( NOW() - CreatedDate)*24)), 
&quot;0&quot;&amp; TEXT(FLOOR(( NOW() - CreatedDate)*24)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Since New</label>
    <type>Text</type>
</CustomField>