force-app/main/default/objects/Case/fields/Hours_Since_New_D_H__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_New_D_H__c</fullName>
    <formula>TEXT( 
FLOOR( NOW() - CreatedDate ) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
FLOOR(MOD((NOW() - CreatedDate)*24,24)) 
) &amp;&quot; Hours &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since New (D:H)</label>
    <type>Text</type>
</CustomField>