force-app/main/default/objects/Case/fields/Hours_Since_Pending__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_Pending__c</fullName>
    <formula>IF( 
FLOOR(( NOW() - Pending_At__c )*24)&gt;9, 
TEXT(FLOOR(( NOW() - Pending_At__c)*24)), 
&quot;0&quot;&amp; TEXT(FLOOR(( NOW() - Pending_At__c)*24)) 
)</formula>
    <label>Hours Since Pending</label>
    <type>Text</type>
</CustomField>