force-app/main/default/objects/Case/fields/Hours_Since_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_Resolved__c</fullName>
    <description>Hours passed since case has been in resolved state compared to current time.</description>
    <formula>IF(
FLOOR(( NOW() -  resolved_at__c )*24)&gt;9,
TEXT(FLOOR(( NOW() - resolved_at__c)*24)),
&quot;0&quot;&amp; TEXT(FLOOR(( NOW() - resolved_at__c)*24))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Since Resolved</label>
    <type>Text</type>
</CustomField>