force-app/main/default/objects/Case/fields/HSC_C__c.field-meta.xml
<CustomField>
    <fullName>HSC_C__c</fullName>
    <formula>HSN__c  -  HSR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>