force-app/main/default/objects/Case/fields/HSN__c.field-meta.xml
<CustomField>
    <fullName>HSN__c</fullName>
    <formula>VALUE(Hours_Since_New__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>