force-app/main/default/objects/Case/fields/HSP__c.field-meta.xml
<CustomField>
    <fullName>HSP__c</fullName>
    <formula>Value(Hours_Since_Pending__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>