force-app/main/default/objects/Case/fields/HSR__c.field-meta.xml
<CustomField>
    <fullName>HSR__c</fullName>
    <formula>Value(Hours_Since_Resolved__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>