force-app/main/default/objects/Case/fields/Installation_Environment__c.field-meta.xml
<CustomField>
    <fullName>Installation_Environment__c</fullName>
    <description>This section generally used for the Recommendation section which we are having in the DAR format. For example we recommend customer to use proper power supply, ground cables etc. Do take input from either Repair Agent or Engineering Team.</description>
    <inlineHelpText>For this we need to take inputs from Repair Agent, for Canada RMA Li and for India RMA Rohit or engineering team.</inlineHelpText>
    <label>Installation Environment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>