force-app/main/default/objects/Case/fields/Instruction_to_Operations__c.field-meta.xml
<CustomField>
    <fullName>Instruction_to_Operations__c</fullName>
    <description>This is used when we get the instruction from the Engineering to the repair agent.</description>
    <inlineHelpText>This is used when we get the instruction from the Engineering to the repair agent.</inlineHelpText>
    <label>Recommendations/Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>