force-app/main/default/objects/Case/fields/isSLAViolated__c.field-meta.xml
<CustomField>
    <fullName>isSLAViolated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSLAViolated</label>
    <type>Checkbox</type>
</CustomField>