force-app/main/default/objects/Case/fields/isUpd__c.field-meta.xml
<CustomField>
    <fullName>isUpd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUpd</label>
    <type>Checkbox</type>
</CustomField>