force-app/main/default/objects/Case/fields/IXM_WEB_Issue__c.field-meta.xml
<CustomField>
    <fullName>IXM_WEB_Issue__c</fullName>
    <description>List of all IXM WEB Issues raised to Technical Services Team</description>
    <inlineHelpText>List of all IXM WEB Issues raised to Technical Services Team</inlineHelpText>
    <label>IXM WEB Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installation Issue</fullName>
            </value>
            <value>
                <fullName>Database Configuration Issue</fullName>
            </value>
            <value>
                <fullName>Group Sync Issue</fullName>
            </value>
            <value>
                <fullName>UI &amp; UX Issue</fullName>
            </value>
            <value>
                <fullName>Transaction Log Issue</fullName>
            </value>
            <value>
                <fullName>Video Surveillance Issue</fullName>
            </value>
            <value>
                <fullName>Device Discovery Issue</fullName>
            </value>
            <value>
                <fullName>Template Transfer Issue</fullName>
            </value>
            <value>
                <fullName>WEB Cloud Issue</fullName>
            </value>
            <value>
                <fullName>IXM WEB Upgradation Issue</fullName>
            </value>
            <value>
                <fullName>IXM LINK Issue</fullName>
            </value>
            <value>
                <fullName>Machine Code Changes Issue</fullName>
            </value>
            <value>
                <fullName>IXM Convert Issue</fullName>
            </value>
            <value>
                <fullName>IXM WEB Service Issue</fullName>
            </value>
            <value>
                <fullName>Smart Card Issue</fullName>
            </value>
            <value>
                <fullName>Bonjour Service Issue</fullName>
            </value>
            <value>
                <fullName>License Issue</fullName>
            </value>
            <value>
                <fullName>IXM Report Issue</fullName>
            </value>
            <value>
                <fullName>Translate Issue</fullName>
            </value>
            <value>
                <fullName>USB Sensor Issue</fullName>
            </value>
            <value>
                <fullName>IXM WEB Performance Issue</fullName>
            </value>
            <value>
                <fullName>Active Directory Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>