force-app/main/default/objects/Case/fields/labels__c.field-meta.xml
<CustomField>
    <fullName>labels__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Assigned Labels</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>