force-app/main/default/objects/Case/fields/Labels_Pickval__c.field-meta.xml
<CustomField>
    <fullName>Labels_Pickval__c</fullName>
    <label>Labels</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.2.20.0</fullName>
            </value>
            <value>
                <fullName>1.3.0.0</fullName>
            </value>
            <value>
                <fullName>1.3.0.1</fullName>
            </value>
            <value>
                <fullName>1.4.0.0</fullName>
            </value>
            <value>
                <fullName>1.4.9.0</fullName>
            </value>
            <value>
                <fullName>10 Days Pending</fullName>
            </value>
            <value>
                <fullName>1 Day Pending</fullName>
            </value>
            <value>
                <fullName>2 Days Pending</fullName>
            </value>
            <value>
                <fullName>30 Days RMA Pending</fullName>
            </value>
            <value>
                <fullName>3 Days Pending</fullName>
            </value>
            <value>
                <fullName>4 Days Pending</fullName>
            </value>
            <value>
                <fullName>5 Days Pending</fullName>
            </value>
            <value>
                <fullName>6 Days Pending</fullName>
            </value>
            <value>
                <fullName>7 Days Pending</fullName>
            </value>
            <value>
                <fullName>8 Days Pending</fullName>
            </value>
            <value>
                <fullName>8 hours</fullName>
            </value>
            <value>
                <fullName>9 Days Pending</fullName>
            </value>
            <value>
                <fullName>9 Hours</fullName>
            </value>
            <value>
                <fullName>Abandoned Chats</fullName>
            </value>
            <value>
                <fullName>Auto_resolved</fullName>
            </value>
            <value>
                <fullName>Call_Reminder_Sent</fullName>
            </value>
            <value>
                <fullName>Case_Open_Reminder_Sent</fullName>
            </value>
            <value>
                <fullName>Control4 Driver v109</fullName>
            </value>
            <value>
                <fullName>Control4 Driver v115</fullName>
            </value>
            <value>
                <fullName>Control4 Driver v120</fullName>
            </value>
            <value>
                <fullName>Csat</fullName>
            </value>
            <value>
                <fullName>CSCM_Completed</fullName>
            </value>
            <value>
                <fullName>CSCM-Pending</fullName>
            </value>
            <value>
                <fullName>Engineering Completed</fullName>
            </value>
            <value>
                <fullName>Engineering Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>