force-app/main/default/objects/Case/fields/language__c.field-meta.xml
<CustomField>
    <fullName>language__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>