force-app/main/default/objects/Case/fields/Latest_Label__c.field-meta.xml
<CustomField>
    <fullName>Latest_Label__c</fullName>
    <label>Latest Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>