force-app/main/default/objects/Case/fields/Num_WM__c.field-meta.xml
<CustomField>
    <fullName>Num_WM__c</fullName>
    <description>To get days of year in after completion of RMA</description>
    <formula>(DATE(2019,12,31)  -  DATEVALUE(custom_rma_complete_date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To get days of year in after completion of RMA</inlineHelpText>
    <label>Num_WM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>