force-app/main/default/objects/Case/fields/Open_Age_LastValue__c.field-meta.xml
<CustomField>
    <fullName>Open_Age_LastValue__c</fullName>
    <label>Open Age(LastValue)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>