force-app/main/default/objects/Case/fields/opened_at__c.field-meta.xml
<CustomField>
    <fullName>opened_at__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Opened At</label>
    <type>DateTime</type>
</CustomField>