force-app/main/default/objects/Case/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <formula>CASESAFEID(Owner:User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerId</label>
    <type>Text</type>
</CustomField>