force-app/main/default/objects/Case/fields/Pending_At__c.field-meta.xml
<CustomField>
    <fullName>Pending_At__c</fullName>
    <description>Displays timestamp when case moves to Pending State</description>
    <label>Pending At</label>
    <type>DateTime</type>
</CustomField>