force-app/main/default/objects/Case/fields/Previos_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Previos_Owner_Name__c</fullName>
    <formula>IF(NOT(ISNULL(Previous_Owner__c)), Previous_Owner__r.FirstName +  &quot; &quot; +  Previous_Owner__r.LastName  ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previos Owner Name</label>
    <type>Text</type>
</CustomField>