force-app/main/default/objects/Case/fields/Priority_Color__c.field-meta.xml
<CustomField>
    <fullName>Priority_Color__c</fullName>
    <formula>IF(OR(ISPICKVAL(Priority,&quot;1&quot;),ISPICKVAL(Priority,&quot;2&quot;),ISPICKVAL(Priority,&quot;3&quot;)), IMAGE(&quot;/resource/GreenImage&quot;,&quot;sla&quot;,15,100),
IF(OR(ISPICKVAL(Priority,&quot;4&quot;),ISPICKVAL(Priority,&quot;5&quot;),ISPICKVAL(Priority,&quot;6&quot;)),IMAGE(&quot;/resource/YellowImg&quot;,&quot;sla&quot;,15,100),
IF(OR(ISPICKVAL(Priority,&quot;7&quot;),ISPICKVAL(Priority,&quot;8&quot;),ISPICKVAL(Priority,&quot;9&quot;),ISPICKVAL(Priority,&quot;10&quot;)),IMAGE(&quot;/resource/RedImage&quot;,&quot;sla&quot;,15,100),
&apos;&apos;)))</formula>
    <label>Priority Color</label>
    <type>Text</type>
</CustomField>