force-app/main/default/objects/Case/fields/Product_Feedback_Score__c.field-meta.xml
<CustomField>
    <fullName>Product_Feedback_Score__c</fullName>
    <label>Product Feedback Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>