force-app/main/default/objects/Case/fields/Reason_for_delay_in_RMA__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_delay_in_RMA__c</fullName>
    <description>The reason that is causing a delay in RMA Completion</description>
    <inlineHelpText>The reason that is causing a delay in RMA Completion</inlineHelpText>
    <label>Reason for delay in RMA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account On Hold</fullName>
            </value>
            <value>
                <fullName>ECO/ECN Not Released</fullName>
            </value>
            <value>
                <fullName>Engineering Instruction Pending</fullName>
            </value>
            <value>
                <fullName>Ops is busy</fullName>
            </value>
            <value>
                <fullName>Part(s) Unavailable</fullName>
            </value>
            <value>
                <fullName>Payment Not Received</fullName>
            </value>
            <value>
                <fullName>Payment On Hold</fullName>
            </value>
            <value>
                <fullName>Ship Out Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>