force-app/main/default/objects/Case/fields/received_at__c.field-meta.xml
<CustomField>
    <fullName>received_at__c</fullName>
    <description>Auto created by SCMT.</description>
    <label>Received At</label>
    <type>DateTime</type>
</CustomField>