force-app/main/default/objects/Case/fields/Repair_Agent__c.field-meta.xml
<CustomField>
    <fullName>Repair_Agent__c</fullName>
    <description>Repair Agent assigned to particular RMA Case</description>
    <label>Repair Agent</label>
    <length>70</length>
    <type>Text</type>
</CustomField>