force-app/main/default/objects/Case/fields/RMA_by_Business_Category__c.field-meta.xml
<CustomField>
    <fullName>RMA_by_Business_Category__c</fullName>
    <label>RMA by Business Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise Access</fullName>
            </value>
            <value>
                <fullName>IOT</fullName>
            </value>
            <value>
                <fullName>Time &amp; Attendance</fullName>
            </value>
            <value>
                <fullName>Smart Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>