force-app/main/default/objects/Case/fields/RMA_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>RMA_Conclusion__c</fullName>
    <description>This field is used to mentioned the conclusion section in DAR. We are in general adding whatever components which we have replaced or what exactly have been repaired. For this we need to take inputs from Repair Agent, for Canada RMA Li and for India RMA Rohit or engineering team.</description>
    <inlineHelpText>For this we need to take inputs from Repair Agent, for Canada RMA Li and for India RMA Rohit or engineering team.</inlineHelpText>
    <label>RMA Conclusion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>