force-app/main/default/objects/Case/fields/RMA_Device_At_Invixium_Since__c.field-meta.xml
<CustomField>
    <fullName>RMA_Device_At_Invixium_Since__c</fullName>
    <formula>TEXT( 
FLOOR(  Current_Date__c  - custom_rma_device_received_date__c) 
) &amp; &quot; Days &quot;</formula>
    <label>RMA Device At Invixium Since</label>
    <type>Text</type>
</CustomField>