force-app/main/default/objects/Case/fields/RMA_device_rcvd_cmpltd_diff__c.field-meta.xml
<CustomField>
    <fullName>RMA_device_rcvd_cmpltd_diff__c</fullName>
    <formula>TEXT( 
FLOOR( custom_rma_complete_date__c - custom_rma_device_received_date__c) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
FLOOR(MOD((custom_rma_complete_date__c  - custom_rma_device_received_date__c)*24,24)) 
) &amp;&quot; Hours &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA device rcvd &amp; cmpltd diff</label>
    <type>Text</type>
</CustomField>