force-app/main/default/objects/Case/fields/RMA_Device_received_and_Completed_date__c.field-meta.xml
<CustomField>
    <fullName>RMA_Device_received_and_Completed_date__c</fullName>
    <formula>TEXT(
FLOOR( custom_rma_complete_date__c - custom_rma_device_received_date__c)
) &amp; &quot; Days &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA Device received and Completed date</label>
    <type>Text</type>
</CustomField>