force-app/main/default/objects/Case/fields/RMA_Initiated_and_Completed_Difference__c.field-meta.xml
<CustomField>
    <fullName>RMA_Initiated_and_Completed_Difference__c</fullName>
    <formula>TEXT( 
FLOOR( custom_rma_complete_date__c - custom_rma_initiate_date__c) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
FLOOR(MOD((custom_rma_complete_date__c  - custom_rma_initiate_date__c)*24,24)) 
) &amp;&quot; Hours &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA Initiated and Completed Difference</label>
    <type>Text</type>
</CustomField>