force-app/main/default/objects/Case/fields/RMA_Status__c.field-meta.xml
<CustomField>
    <fullName>RMA_Status__c</fullName>
    <label>RMA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Device Received</fullName>
            </value>
            <value>
                <fullName>Under Reapir</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Under Burning</fullName>
            </value>
            <value>
                <fullName>RMA Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>RMA On Hold</fullName>
            </value>
            <value>
                <fullName>Refurbish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>