force-app/main/default/objects/Case/fields/RMA_View_List__c.field-meta.xml
<CustomField>
    <fullName>RMA_View_List__c</fullName>
    <label>RMA View List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>