force-app/main/default/objects/Case/fields/SLA_Violated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Violated_Date_Time__c</fullName>
    <formula>IF(IsEscalated,NOW(),NULL)</formula>
    <label>SLA Violated Date/Time</label>
    <type>DateTime</type>
</CustomField>