force-app/main/default/objects/Case/fields/SLA_Violdation_D_T__c.field-meta.xml
<CustomField>
    <fullName>SLA_Violdation_D_T__c</fullName>
    <label>SLA Violdation D/T</label>
    <type>DateTime</type>
</CustomField>