force-app/main/default/objects/Case/fields/SLATargetDate__c.field-meta.xml
<CustomField>
    <fullName>SLATargetDate__c</fullName>
    <formula>IF(ISPICKVAL(Status, &quot;Open&quot;),CASE(MOD( DATEVALUE( opened_at__c) - DATE( 1900, 1, 7 ), 7 ), 0, DATETIMEVALUE( opened_at__c) + 5, 6, DATETIMEVALUE( opened_at__c) + 6,DATETIMEVALUE( opened_at__c) + 7),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLATargetDate</label>
    <type>DateTime</type>
</CustomField>