force-app/main/default/objects/Case/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IMAGE(CASE(  Status , 
&apos;New&apos;,&apos;/resource/icons/desk-new-v2.png&apos;, 
&apos;Open&apos;,&apos;/resource/icons/desk-open-v2.png&apos;, 
&apos;Pending&apos;,&apos;/resource/icons/desk-pending-v2.png&apos;,
&apos;Resolved&apos;,&apos;/resource/icons/desk-resolved-v2.png&apos;, 
&apos;Closed&apos;,&apos;/resource/icons/desk-resolved-v2.png&apos;,&apos;&apos;),&apos;&apos;,22,22) + &apos; &apos; + Text(Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>