force-app/main/default/objects/Case/fields/tempCurrentOpenHour__c.field-meta.xml
<CustomField>
    <fullName>tempCurrentOpenHour__c</fullName>
    <formula>TEXT(VALUE(MID( TEXT( tempOpenDate__c  ), 12, 2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tempCurrentOpenHour</label>
    <type>Text</type>
</CustomField>