force-app/main/default/objects/Case/fields/tempOpenAgeField__c.field-meta.xml
<CustomField>
    <fullName>tempOpenAgeField__c</fullName>
    <formula>IF(AND(VALUE(MID( TEXT( tempOpenDate__c ), 12, 2)) &gt; 4,VALUE(MID( TEXT( tempOpenDate__c ), 12, 2)) &lt; 13)
	,tempOpenDate__c
	,IF(OR(VALUE(MID( TEXT( tempOpenDate__c ), 12, 2)) &gt;= 19,VALUE(MID( TEXT( tempOpenDate__c ), 12, 2)) &lt; 4)
		,DATETIMEVALUE(TEXT(YEAR(DATEVALUE(tempOpenDate__c)))+&quot;-&quot; +TEXT(MONTH(DATEVALUE(tempOpenDate__c)))+&quot;-&quot; +TEXT(DAY(DATEVALUE(tempOpenDate__c)))+&quot; 4:00:00&quot;)
			,DATETIMEVALUE(TEXT(YEAR(DATEVALUE(tempOpenDate__c)))+&quot;-&quot; +TEXT(MONTH(DATEVALUE(tempOpenDate__c)))+&quot;-&quot; +TEXT(DAY(DATEVALUE(tempOpenDate__c)))+&quot; 13:00:00&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tempOpenAgeField</label>
    <type>DateTime</type>
</CustomField>