force-app/main/default/objects/Case/fields/tempOpenDate__c.field-meta.xml
<CustomField>
    <fullName>tempOpenDate__c</fullName>
    <label>tempOpenDate</label>
    <type>DateTime</type>
</CustomField>